--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-19
 android.library.reference.1=../../workspace/emclient-android/easemobchatsdk
+android.library.reference.2=../../workspace3/xUtils/library
